# transformer

./: .gitignore  pyproject.toml  requirements.txt
src/transformer/: config.toml  config_loader.py  data.py  hparams.py  main.py  model.py  presets.py  scheduler.py
