[project]
name = "transformer"
version = "0.1.0"
requires-python = ">=3.10"
authors = [
  { name = "alperenunlu", email = "97191996+alperenunlu@users.noreply.github.com" }
]
dependencies = ["pip>=25.1.1,<26"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
datasets = "*"
tokenizers = "*"
accelerate = "*"
transformer = { path = ".", editable = true }
torchmetrics = "*"
tqdm = "*"
wandb = "*"

[tool.pixi.target.osx-arm64.pypi-dependencies]
torch = "*"

[tool.pixi.target.linux-64.pypi-dependencies]
torch = { version = "*", index = "https://download.pytorch.org/whl/cu128" }

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[dependency-groups]
test = ["ruff", "mypy"]
